--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,25 @@
 {
   "dependencies": {
-    "express": "^4.18.1"
-  }
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "flags": "^0.1.3"
+  },
+  "name": "todo-backend",
+  "version": "1.0.0",
+  "description": "Backend for the todo app",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js --port=8080"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/KeatonBrink/CodeSchoolBackend.git"
+  },
+  "author": "Keaton Brink",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/KeatonBrink/CodeSchoolBackend/issues"
+  },
+  "homepage": "https://github.com/KeatonBrink/CodeSchoolBackend#readme"
 }
