--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,10 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "flags": "^0.1.3"
+    "flags": "^0.1.3",
+    "install": "^0.13.0",
+    "mongoose": "^6.4.0",
+    "npm": "^8.12.2"
   },
   "name": "todo-backend",
   "version": "1.0.0",
